--- a/MLOpsZoomCamp.ipynb
+++ b/MLOpsZoomCamp.ipynb
@@ -99,6 +99,16 @@
     "    mkdir docker\n",
     "    wget https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m) -o docker-compose\n",
     "    chmod +x docker-compose\n",
+    "\n",
+    "    echo \"\\n# Path to anaconda\" >> ~/.zshrc && source ~/.zshrc\n",
+    "\n",
+    "    ```\n",
+    "\n",
+    "- Add the path to all software we just installed\n",
+    "\n",
+    "    ```sh\n",
+    "    echo \"\\n# Path to docker\" >> ~/.zshrc && source ~/.zshrc\n",
+    "    echo 'export PATH=\"${HOME}/software/docker:${PATH}\"' >> ~/.zshrc && source ~/.zshrc\n",
     "    ```"
    ]
   },
