--- a/MLOpsZoomCamp.ipynb
+++ b/MLOpsZoomCamp.ipynb
@@ -25,6 +25,8 @@
    "id": "b5c3e5d9",
    "metadata": {},
    "source": [
+    "(Optional if you already have a good enough local machine or in-house cluster account)\n",
+    "\n",
     "- Launch a [EC2 machine on AWS](https://eu-central-1.console.aws.amazon.com/ec2/home?region=eu-central-1#Home:) --> see steps\n",
     "\n",
     "- Now ssh to the EC2 machine (better add it to the `.ssh/config` file) --> see steps\n",
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "984c1d12",
+   "id": "2b6d9af2",
    "metadata": {},
    "source": [
     "- This EC2 machine comes with very latest version of python. But we want to use and older version that works with other libraries we intent to use. For this reason we download (using wget from [here](https://www.anaconda.com/download/success)) and install anaconda to create an env wth desired python version and libraries. --> see steps\n",
@@ -87,8 +89,27 @@
     "    wget https://repo.anaconda.com/archive/Anaconda3-2025.06-0-Linux-x86_64.sh\n",
     "    bash Anaconda3-2025.06-0-Linux-x86_64.sh\n",
     "    ```\n",
-    "    Specify the installation path as `/home/ubuntu/software/anaconda/anaconda3`\n",
     "\n",
+    "    - Specify the installation path as `/home/ubuntu/software/anaconda/anaconda3`\n",
+    "\n",
+    "    - Enter `yes` when prompted  with -\n",
+    "\n",
+    "        ```\n",
+    "        Do you wish to update your shell profile to automatically initialize conda?\n",
+    "        .\n",
+    "        .\n",
+    "        You can undo this by running `conda init --reverse $SHELL`? [yes|no]\n",
+    "        [no] >>>\n",
+    "        ```\n",
+    "\n",
+    "    - This initializes conda env every time we log in (notice `(base) ➜  ~` every new log in). For more details on how this works see ~./zshrc line starting with  `# >>> conda initialize >>>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "984c1d12",
+   "metadata": {},
+   "source": [
     "- We now install docker and docker compose as we will need it later for containerization --> see steps\n",
     "\n",
     "    ```sh\n",
@@ -99,89 +120,27 @@
     "    mkdir docker\n",
     "    wget https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m) -o docker-compose\n",
     "    chmod +x docker-compose\n",
-    "\n",
-    "    echo \"\\n# Path to anaconda\" >> ~/.zshrc && source ~/.zshrc\n",
-    "\n",
     "    ```\n",
-    "\n",
-    "- Add the path to all software we just installed\n",
+    "    Add path to docker compose to $PATH\n",
     "\n",
     "    ```sh\n",
     "    echo \"\\n# Path to docker\" >> ~/.zshrc && source ~/.zshrc\n",
     "    echo 'export PATH=\"${HOME}/software/docker:${PATH}\"' >> ~/.zshrc && source ~/.zshrc\n",
-    "    ```"
+    "    ```\n",
+    "\n",
+    "- To run docker we need to use `sudo` everytime :(. To avoid this we need to our user to _docker group_\n",
+    "\n",
+    "    ```sh\n",
+    "    sudo groupadd docker # group 'docker' already exists\n",
+    "    sudo usermod -aG docker $USER # we add ourselves to user group of docker\n",
+    "    ```\n",
+    "\n",
+    "    Then log out of EC2 machine and log back, and test using `docker run hello-world:latest` --> works w/o sudo! :)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "35f95917",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "efa2ecab",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f5441517",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07949818",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0256785c",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "586f470a",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7f7cc771",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40a7d443",
+   "id": "53df9561",
    "metadata": {},
    "source": []
   }
