--- a/02-experiment-tracking/running-mlflow-examples/scenario-1.ipynb
+++ b/02-experiment-tracking/running-mlflow-examples/scenario-1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tracking URI: 'file:///home/ubuntu/DataTalksClub/mlops-zoomcamp/02-experiment-tracking/running-mlflow-examples/mlruns'\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"tracking URI: '{mlflow.get_tracking_uri()}'\")"
    ]
@@ -133,11 +141,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0848c9d6c7d415ad6c477ff7ff8e98694d1a4aa96d0deee89244642e6b630036"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('exp-tracking-env')",
+   "display_name": "mlops-zoomcamp-env",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
