--- a/02-experiment-tracking/running-mlflow-examples/scenario-2.ipynb
+++ b/02-experiment-tracking/running-mlflow-examples/scenario-2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,27 +33,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tracking URI: 'http://127.0.0.1:5000'\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"tracking URI: '{mlflow.get_tracking_uri()}'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Experiment: artifact_location='mlflow-artifacts:/0', creation_time=1758627230100, experiment_id='0', last_update_time=1758627230100, lifecycle_stage='active', name='Default', tags={}>]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mlflow.search_experiments()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/09/23 13:39:02 INFO mlflow.tracking.fluent: Experiment with name 'my-experiment-1' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "default artifacts URI: 'mlflow-artifacts:/1/f0e4a616bfc0444daf0e5adc08fa55da/artifacts'\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.datasets import load_iris\n",
@@ -78,9 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Experiment: artifact_location='mlflow-artifacts:/1', creation_time=1758627542040, experiment_id='1', last_update_time=1758627542040, lifecycle_stage='active', name='my-experiment-1', tags={}>,\n",
+       " <Experiment: artifact_location='mlflow-artifacts:/0', creation_time=1758627230100, experiment_id='0', last_update_time=1758627230100, lifecycle_stage='active', name='Default', tags={}>]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mlflow.search_experiments()"
    ]
@@ -94,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,18 +152,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.search_registered_models()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'iris-classifier'.\n",
+      "2025/09/23 13:53:06 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: iris-classifier, version 1\n",
+      "Created version '1' of model 'iris-classifier'.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: aliases=[], creation_timestamp=1758628386495, current_stage='None', description='', last_updated_timestamp=1758628386495, name='iris-classifier', run_id='f0e4a616bfc0444daf0e5adc08fa55da', run_link='', source='mlflow-artifacts:/1/f0e4a616bfc0444daf0e5adc08fa55da/artifacts/models', status='READY', status_message='', tags={}, user_id='', version='1'>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run_id = client.search_runs(experiment_ids='1')[0].info.run_id\n",
     "mlflow.register_model(\n",
@@ -125,21 +202,11 @@
     "    name='iris-classifier'\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0848c9d6c7d415ad6c477ff7ff8e98694d1a4aa96d0deee89244642e6b630036"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('exp-tracking-env')",
+   "display_name": "dataScienceEnv",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
