--- a/0_MLOpsZoomCamp.ipynb
+++ b/0_MLOpsZoomCamp.ipynb
@@ -448,20 +448,57 @@
     "# Gather top 3 runs in exp with id 1\n",
     "runs = client.search_runs(\n",
     "    experiment_ids=\"1\",\n",
-    "    filter_string=\"metrics.rmse < 5.63\",\n",
+    "    filter_string=\"metrics.rmse < 5.63\",    # use tags, metrics or params to filter\n",
     "    run_view_type=ViewType.ACTIVE_ONLY,\n",
     "    max_results=5,\n",
-    "    order_by=[\"metrics.rmse ASC\"]\n",
+    "    order_by=[\"metrics.rmse ASC\"]           # use metric to arrange the runs in some order\n",
     ")\n",
     "\n",
     "# Print id and metric\n",
     "for run in runs:\n",
     "    print(f\"run id: {run.info.run_id}, rmse: {run.data.metrics['rmse']:.4f}\")\n",
     "\n",
-    "# \n",
+    "# Register a new version of a model\n",
+    "import mlflow\n",
+    "model_name = \"nyc-taxi-regressor\"\n",
+    "mlflow.set_tracking_uri(MLFLOW_TRACKING_URI)\n",
+    "run_id = \"f933c26b98914d81a9ec2b0f9bf4551e\"     # a model run_id that was not registered yet\n",
+    "model_uri = f\"runs:/{run_id}/model\"\n",
+    "mlflow.register_model(model_uri=model_uri, name=model_name)\n",
     "\n",
+    "# # Transition model from one tag or alias (stage) to another\n",
+    "# client.set_registered_model_alias(name=model_name, alias=\"hopeful\", version=4)\n",
+    "# client.set_model_version_tag(name=model_name, key=\"model\", value=\"etr\", version=4)\n",
     "\n",
+    "# Or transition model stage (old mlflow model registry)\n",
+    "client.transition_model_version_stage(\n",
+    "    name=model_name, \n",
+    "    version=4, \n",
+    "    stage=\"Staging\", \n",
+    "    archive_existing_versions=False\n",
+    ")\n",
     "\n",
+    "# Add description\n",
+    "from datetime import datetime\n",
+    "date = datetime.today().date()\n",
+    "client.update_model_version(\n",
+    "    name=model_name, version=4, \n",
+    "    description=f\"This model was transitioned to Staging on {date}\"\n",
+    ")\n",
+    "\n",
+    "# Assume version 4 (latest) performs better than version 1 (current prod version)\n",
+    "# So we push version 4 to production stage and the existing prod version to archive\n",
+    "client.transition_model_version_stage(\n",
+    "    name=model_name, \n",
+    "    version=4, \n",
+    "    stage=\"Production\", \n",
+    "    archive_existing_versions=True\n",
+    ")\n",
+    "client.update_model_version(\n",
+    "    name=model_name,\n",
+    "    version=4,\n",
+    "    description=f\"This model was transitioned to Production on {date}\"\n",
+    ")\n",
     "```"
    ]
   },
@@ -469,7 +506,148 @@
    "cell_type": "markdown",
    "id": "b85e65b4",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 2d. MLflow in practice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4ccc040",
+   "metadata": {},
+   "source": [
+    "Just follow this [video](https://youtu.be/1ykg4YmbFVA?list=PL3MmuxUbc_hIUISrluw_A7wDSmfOhErJK) and the notebooks for each scenario.\n",
+    "\n",
+    "<img src=\"2025-09-23_12-51.png\" alt=\"alt text\" width=\"500\"/>\n",
+    "<img src=\"2025-09-23_12-54.png\" alt=\"alt text\" width=\"250\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scenario 1: A single data scientist participating in an ML competition\n",
+    "\n",
+    "MLflow setup:\n",
+    "* Tracking server: no\n",
+    "* Backend store: local filesystem\n",
+    "* Artifacts store: local filesystem\n",
+    "\n",
+    "The experiments can be explored locally by launching the MLflow UI."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0be5f9f8",
+   "metadata": {},
+   "source": [
+    "```py\n",
+    "# mlflow assumes this dir to save exps\n",
+    "print(f\"tracking URI: '{mlflow.get_tracking_uri()}'\")  \n",
+    "# creates mlruns dir with 0 dir with a yaml file for 'Default' exp name\n",
+    "mlflow.search_experiments()\n",
+    "# creates a new exp\n",
+    "mlflow.set_experiment(\"my-experiment-1\")\n",
+    "\n",
+    "with mlflow.start_run():\n",
+    "    # Model training ...\n",
+    "    ...\n",
+    "    mlflow.log_params(params)\n",
+    "    mlflow.log_metric(\"accuracy\", accuracy_score(y, y_pred))\n",
+    "    mlflow.sklearn.log_model(lr, artifact_path=\"models\")\n",
+    "    print(f\"default artifacts URI: '{mlflow.get_artifact_uri()}'\")\n",
+    "```\n",
+    "\n",
+    "Have a look at the `meta.yaml` \n",
+    "```yaml\n",
+    "artifact_location: file:///home/jigar/DataTalksClub/mlops-zoomcamp/02-experiment-tracking/running-mlflow-examples/mlruns/844070181241854736\n",
+    "creation_time: 1758625632232\n",
+    "experiment_id: '844070181241854736'\n",
+    "last_update_time: 1758625632232\n",
+    "lifecycle_stage: active\n",
+    "name: my-experiment-1\n",
+    "```\n",
+    "\n",
+    "and the dir with artifacts/models, metrics, params, tags, and another meta.yaml. As we run more exps under the same exp name we will have more of such dirs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b79b4065",
+   "metadata": {},
+   "source": [
+    "#### Scenario 2: A cross-functional team with one data scientist working on an ML model\n",
+    "\n",
+    "\n",
+    "MLflow setup:\n",
+    "- tracking server: yes, local server\n",
+    "- backend store: sqlite database\n",
+    "- artifacts store: local filesystem\n",
+    "\n",
+    "The experiments can be explored locally by accessing the local tracking server."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You need to launch the mlflow server locally by running in the terminal:\n",
+    "\n",
+    "`mlflow server --backend-store-uri sqlite:///backend.db`\n",
+    "\n",
+    "This will store the meta data about the experiment in `backend.db`\n",
+    "\n",
+    "```py\n",
+    "# We set the tracking uri to this server address instead of \n",
+    "mlflow.set_tracking_uri(\"http://127.0.0.1:5000\")\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Follow the previous steps -- now we do not see different _metadata_ dirs for models, metrics, params, tags and met.yaml file -- these are all stored in the `backend.db`\n",
+    "\n",
+    "Then you can register this model\n",
+    "\n",
+    "```py\n",
+    "from mlflow.tracking import MlflowClient\n",
+    "\n",
+    "client = MlflowClient(\"http://127.0.0.1:5000\")\n",
+    "run_id = client.search_runs(experiment_ids='1')[0].info.run_id\n",
+    "mlflow.register_model(\n",
+    "    model_uri=f\"runs:/{run_id}/models\",\n",
+    "    name='iris-classifier'\n",
+    ")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "586b8edb",
+   "metadata": {},
+   "source": [
+    "### Scenario 3: Multiple data scientists working on multiple ML models\n",
+    "\n",
+    "MLflow setup:\n",
+    "* Tracking server: yes, remote server (EC2). (mlflow server similar to _localhost_)\n",
+    "* Backend store: postgresql database. (stores metadata etc)\n",
+    "* Artifacts store: s3 bucket. (stores models etc.)\n",
+    "\n",
+    "The experiments can be explored by accessing the remote server.\n",
+    "\n",
+    "The example uses AWS to host a remote server. In order to run the example you'll need an AWS account. Follow the steps described in the file `mlflow_on_aws.md` to create a new AWS account and launch the tracking server.\n",
+    "\n",
+    "Follow the steps [here](https://youtu.be/1ykg4YmbFVA?list=PL3MmuxUbc_hIUISrluw_A7wDSmfOhErJK&t=1379)\n",
+    "\n",
+    "```sh\n",
+    "mlflow server -h 0.0.0.0 -p 5000 --backend-store-uri postgresql://mlflow:79PPBWqKgxxzxh28yXpQ@mlflow-database.cha2w240m3r7.eu-central-1.rds.amazonaws.com:5432/mlflow_db --default-artifact-root s3://mlflow-artifacts-remote-279\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b25eb6a",
+   "metadata": {},
+   "source": [
+    "<img src=\"2025-09-23_14-38.png\" alt=\"alt text\" width=\"600\"/>"
+   ]
   },
   {
    "cell_type": "markdown",
