--- a/0_MLOpsZoomCamp.ipynb
+++ b/0_MLOpsZoomCamp.ipynb
@@ -623,7 +623,7 @@
    "id": "586b8edb",
    "metadata": {},
    "source": [
-    "### Scenario 3: Multiple data scientists working on multiple ML models\n",
+    "#### Scenario 3: Multiple data scientists working on multiple ML models\n",
     "\n",
     "MLflow setup:\n",
     "* Tracking server: yes, remote server (EC2). (mlflow server similar to _localhost_)\n",
@@ -652,6 +652,48 @@
   {
    "cell_type": "markdown",
    "id": "9fe8a4fa",
+   "metadata": {},
+   "source": [
+    "### 3. Machine Learning Pipelines\n",
+    "a.k.a. _Workflow Orchestration_ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0de80566",
+   "metadata": {},
+   "source": [
+    "<img src=\"2025-09-24_09-58.png\" alt=\"alt text\" width=\"500\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94bd4076",
+   "metadata": {},
+   "source": [
+    "<img src=\"2025-09-24_10-01.png\" alt=\"alt text\" width=\"200\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf15e6a9",
+   "metadata": {},
+   "source": [
+    "Libs for make genral purpose pipelines -\n",
+    "\n",
+    "* Airflow\n",
+    "* Prefect\n",
+    "* Mage\n",
+    "\n",
+    "Libs specific to ML pipelines\n",
+    "\n",
+    "* Kubeflow pipelines\n",
+    "* MLflow pipelines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0705c07f",
    "metadata": {},
    "source": []
   }
