--- a/03-orchestration/code/duration-prediction.ipynb
+++ b/03-orchestration/code/duration-prediction.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.12.1\n"
+      "Python 3.10.12\n"
      ]
     }
    ],
@@ -290,11 +290,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0848c9d6c7d415ad6c477ff7ff8e98694d1a4aa96d0deee89244642e6b630036"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dataScienceEnv",
    "language": "python",
    "name": "python3"
   },
@@ -308,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
