--- a/03-orchestration/code/duration-prediction.ipynb
+++ b/03-orchestration/code/duration-prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "b2bd82d7",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "41062d8a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "c984c564",
    "metadata": {},
    "outputs": [],
@@ -40,18 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8b135c2b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction import DictVectorizer\n",
-    "from sklearn.metrics import root_mean_squared_error"
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "1464985f",
    "metadata": {},
    "outputs": [
@@ -59,16 +59,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/05/22 12:10:31 INFO mlflow.tracking.fluent: Experiment with name 'nyc-taxi-experiment' does not exist. Creating a new experiment.\n"
+      "2025/09/24 10:20:41 INFO mlflow.tracking.fluent: Experiment with name 'nyc-taxi-experiment' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='mlflow-artifacts:/1', creation_time=1747915831003, experiment_id='1', last_update_time=1747915831003, lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>"
+       "<Experiment: artifact_location='mlflow-artifacts:/1', creation_time=1758702041347, experiment_id='1', last_update_time=1758702041347, lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "f9e6479e",
    "metadata": {},
    "outputs": [],
@@ -105,18 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "8029eba0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = read_dataframe('https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2021-01.parquet')\n",
-    "df_val = read_dataframe('https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2021-02.parquet')"
+    "df_train = read_dataframe('https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2025-01.parquet')\n",
+    "df_val = read_dataframe('https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2025-02.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "c5cbfc25",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "1e9fb68b",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "5f56e97b",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "b1f71259-0e96-4725-9151-dc274f4e984c",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "0ee76202-3ff6-4bd7-b70e-b8d1c87c26d1",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "0e8cd729",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/python/3.12.1/lib/python3.12/site-packages/xgboost/callback.py:386: UserWarning: [12:17:00] WARNING: /workspace/src/objective/regression_obj.cu:250: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "/home/jigar/dataScienceEnv/lib/python3.10/site-packages/xgboost/callback.py:386: UserWarning: [10:27:29] WARNING: /workspace/src/objective/regression_obj.cu:245: reg:linear is now deprecated in favor of reg:squarederror.\n",
       "  self.starting_round = model.num_boosted_rounds()\n"
      ]
     },
@@ -194,53 +194,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation-rmse:11.44482\n",
-      "[1]\tvalidation-rmse:10.77202\n",
-      "[2]\tvalidation-rmse:10.18363\n",
-      "[3]\tvalidation-rmse:9.67396\n",
-      "[4]\tvalidation-rmse:9.23166\n",
-      "[5]\tvalidation-rmse:8.84808\n",
-      "[6]\tvalidation-rmse:8.51883\n",
-      "[7]\tvalidation-rmse:8.23597\n",
-      "[8]\tvalidation-rmse:7.99320\n",
-      "[9]\tvalidation-rmse:7.78709\n",
-      "[10]\tvalidation-rmse:7.61022\n",
-      "[11]\tvalidation-rmse:7.45952\n",
-      "[12]\tvalidation-rmse:7.33049\n",
-      "[13]\tvalidation-rmse:7.22098\n",
-      "[14]\tvalidation-rmse:7.12713\n",
-      "[15]\tvalidation-rmse:7.04752\n",
-      "[16]\tvalidation-rmse:6.98005\n",
-      "[17]\tvalidation-rmse:6.92232\n",
-      "[18]\tvalidation-rmse:6.87112\n",
-      "[19]\tvalidation-rmse:6.82740\n",
-      "[20]\tvalidation-rmse:6.78995\n",
-      "[21]\tvalidation-rmse:6.75792\n",
-      "[22]\tvalidation-rmse:6.72994\n",
-      "[23]\tvalidation-rmse:6.70547\n",
-      "[24]\tvalidation-rmse:6.68390\n",
-      "[25]\tvalidation-rmse:6.66421\n",
-      "[26]\tvalidation-rmse:6.64806\n",
-      "[27]\tvalidation-rmse:6.63280\n",
-      "[28]\tvalidation-rmse:6.61924\n",
-      "[29]\tvalidation-rmse:6.60773\n"
+      "[0]\tvalidation-rmse:8.56745\n",
+      "[1]\tvalidation-rmse:8.10033\n",
+      "[2]\tvalidation-rmse:7.69739\n",
+      "[3]\tvalidation-rmse:7.35105\n",
+      "[4]\tvalidation-rmse:7.05239\n",
+      "[5]\tvalidation-rmse:6.80020\n",
+      "[6]\tvalidation-rmse:6.58162\n",
+      "[7]\tvalidation-rmse:6.39726\n",
+      "[8]\tvalidation-rmse:6.24197\n",
+      "[9]\tvalidation-rmse:6.11059\n",
+      "[10]\tvalidation-rmse:6.00193\n",
+      "[11]\tvalidation-rmse:5.90700\n",
+      "[12]\tvalidation-rmse:5.82752\n",
+      "[13]\tvalidation-rmse:5.76123\n",
+      "[14]\tvalidation-rmse:5.70306\n",
+      "[15]\tvalidation-rmse:5.65560\n",
+      "[16]\tvalidation-rmse:5.61619\n",
+      "[17]\tvalidation-rmse:5.58065\n",
+      "[18]\tvalidation-rmse:5.55157\n",
+      "[19]\tvalidation-rmse:5.52734\n",
+      "[20]\tvalidation-rmse:5.50858\n",
+      "[21]\tvalidation-rmse:5.48872\n",
+      "[22]\tvalidation-rmse:5.47379\n",
+      "[23]\tvalidation-rmse:5.45957\n",
+      "[24]\tvalidation-rmse:5.44705\n",
+      "[25]\tvalidation-rmse:5.43706\n",
+      "[26]\tvalidation-rmse:5.42713\n",
+      "[27]\tvalidation-rmse:5.41891\n",
+      "[28]\tvalidation-rmse:5.41283\n",
+      "[29]\tvalidation-rmse:5.40819\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/python/3.12.1/lib/python3.12/site-packages/mlflow/xgboost/__init__.py:168: UserWarning: [12:17:36] WARNING: /workspace/src/c_api/c_api.cc:1427: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
-      "  xgb_model.save_model(model_data_path)\n",
-      "\u001b[31m2025/05/22 12:17:41 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🏃 View run stylish-auk-139 at: http://localhost:5000/#/experiments/1/runs/494792a9a00b48b1b1ef16a3dd8aeebe\n",
-      "🧪 View experiment at: http://localhost:5000/#/experiments/1\n"
+      "/home/jigar/dataScienceEnv/lib/python3.10/site-packages/mlflow/xgboost/__init__.py:165: UserWarning: [10:27:48] WARNING: /workspace/src/c_api/c_api.cc:1427: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "  xgb_model.save_model(model_data_path)\n"
      ]
     }
    ],
@@ -270,7 +261,7 @@
     "    )\n",
     "\n",
     "    y_pred = booster.predict(valid)\n",
-    "    rmse = root_mean_squared_error(y_val, y_pred)\n",
+    "    rmse = mean_squared_error(y_val, y_pred, squared=False)\n",
     "    mlflow.log_metric(\"rmse\", rmse)\n",
     "\n",
     "    with open(\"models/preprocessor.b\", \"wb\") as f_out:\n",
