--- a/0_MLOpsZoomCamp.ipynb
+++ b/0_MLOpsZoomCamp.ipynb
@@ -679,6 +679,8 @@
    "id": "cf15e6a9",
    "metadata": {},
    "source": [
+    "After converting our python notebook into a script (a very naive ML pipeline) we must use one of the following libs to make it a robust ML pipeline -- handle failures like data server down, local/AWS MLflow server issues etc.\n",
+    "\n",
     "Libs for make genral purpose pipelines -\n",
     "\n",
     "* Airflow\n",
@@ -688,12 +690,86 @@
     "Libs specific to ML pipelines\n",
     "\n",
     "* Kubeflow pipelines\n",
-    "* MLflow pipelines"
+    "* MLflow pipelines\n",
+    "* Metaflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79be69c9",
+   "metadata": {},
+   "source": [
+    "### 4. Deploying a model"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "0705c07f",
+   "metadata": {},
+   "source": [
+    "Three ways of deploying a model\n",
+    "\n",
+    "<img src=\"2025-09-24_14-17.png\" alt=\"alt text\" width=\"500\"/>|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edd57550",
+   "metadata": {},
+   "source": [
+    "<img src=\"2025-09-24_14-20.png\" alt=\"alt text\" width=\"500\"/>\n",
+    "\n",
+    "Maybe you run this job only once or twice by the end of the day (mostly to check or update something). E.g.\n",
+    "\n",
+    "<img src=\"2025-09-24_14-23.png\" alt=\"alt text\" width=\"500\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you want to continuously run the model (in inference mode) -- 1-to-1 client (backend)-server(e.g. ride duration prediction service on AWS). E.g.\n",
+    "\n",
+    "<img src=\"2025-09-24_14-25.png\" alt=\"alt text\" width=\"500\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d46d04a6",
+   "metadata": {},
+   "source": [
+    "1-to-many client (backend)-servers(e.g. ride duration or tip prediction services on AWS)\n",
+    "\n",
+    "<img src=\"2025-09-24_14-31.png\" alt=\"alt text\" width=\"400\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e22f4133",
+   "metadata": {},
+   "source": [
+    "This is already covered in the ML-Zoomcamp. See [here](https://www.youtube.com/watch?v=D7wfMAdgdF8&list=PL3MmuxUbc_hIUISrluw_A7wDSmfOhErJK&index=18&pp=iAQB) for the Recap + Connection of MLflow model registry with flask service. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5f3d43b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b29d912a",
    "metadata": {},
    "source": []
   }
