--- a/0_MLOpsZoomCamp.ipynb
+++ b/0_MLOpsZoomCamp.ipynb
@@ -753,6 +753,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8b68cdf",
+   "metadata": {},
+   "source": [
+    "### 5. ML Monitoring - Model and Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
